Bug 494706 - If HDR is still enabled on Nvidia graphics cards if it was turned on before updating to 6.2
Summary: If HDR is still enabled on Nvidia graphics cards if it was turned on before u...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: colour-management (other bugs)
Version First Reported In: 6.2.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-10-14 00:06 UTC by TheFeelTrain
Modified: 2024-10-18 14:49 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description TheFeelTrain 2024-10-14 00:06:36 UTC
SUMMARY
Because of bug 488941 HDR was supposed to be disabled for Nvidia cards in 6.2. 
But it is still enabled if it was enabled before updating.

STEPS TO REPRODUCE
1. Turn HDR on in 6.1 (or 6.0 presumably)
2. Update to 6.2

OBSERVED RESULT
kscreen-doctor -o still shows HDR enabled on the output and colors are washed out.
kscreen-doctor output.1.hdr.disable is the only way to disable it since the GUI option is hidden.

EXPECTED RESULT
HDR should be completely disabled without KWIN_DRM_ALLOW_NVIDIA_COLORSPACE=1

SOFTWARE/OS VERSIONS
Arch Linux
KDE Plasma Version: 6.2.0
KDE Frameworks Version: 6.6.0
Qt Version: 6.7.3
Comment 1 Bug Janitor Service 2024-10-15 13:50:59 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/6627
Comment 2 Zamundaaa 2024-10-18 14:49:00 UTC
hmm, bugzilla bot seems to have missed this one. The fix for this was merged