backends/drm: disable hdr if we removed the capabilities for it

That was the intention behind disabling it by default for some drivers, and it also
slightly simplifes the code

BUG: 494706


(cherry picked from commit 85485a73445bfc64f49fcc86c2a4c1b55aa84c77)

Co-authored-by: Xaver Hugl <xaver.hugl@gmail.com>